--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -36,6 +36,7 @@
       <div class="banner">
       </div>
       <div class="main-page-container text-muted text-center">
+        <app-song-item></app-song-item>
         <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, similique.</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi enim velit assumenda temporibus quas, eaque
