--- a/src/assets/styles/config.scss
+++ b/src/assets/styles/config.scss
@@ -34,30 +34,35 @@ $xl-width: 1200px;
 
 $radius-md: 1rem;
 $radius-sm: .5rem;
-$sidebar-width: 16.5rem !default;
 $wrapper-padding-x: 2rem !default;
-$player-from-left: $sidebar-width + $wrapper-padding-x;
-$player-height: 4.5rem;
 $zIndex-player: 1004;
+$transition-short: .2s all ease-in !default;
 $transition-medium: .4s all ease-in !default;
 $transition-fast: .2s all ease-in !default;
 
+//Sidebar
+$sidebar-width: 16.5rem !default;
+$sidebar-small-width: 5rem !default;
+
+//Player
 // $player-cover-image-width: $player-height;
+$player-from-left: $sidebar-width + $wrapper-padding-x;
+$player-height: 4.5rem;
 $player-shadow: 0 1px 12px 2px rgba($black, .15);
 $player-progress-bar-height: .125rem;
-
-$audio-control-padding-x: 1.5rem;
-
 $volume-height: .125rem;
-
 $highlighted-theme-color: rgb(173, 32, 212);
-
 $slider-base-color: $highlighted-theme-color;
 $slider-background-color: rgba(173, 32, 212, 0.35);
 $slider-thumb-width: 15px;
 $slider-thumb-height: 15px;
 $slider-transition-duration: 0.4s;
 
+//header
+$zIndex-header: 2000;
+
 $top-banner-height: 30rem;
 $main-page-top-margin: -10rem;
 $main-page-x-margin: 2rem;
+
+$card-img-radius-lg: 1.5rem;
