--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,72 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+  font-family: Kaushan Script;
+  src: url('./assets/fonts/KaushanScript-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+// Roboto Slab
+@font-face {
+  font-family: Roboto Slab;
+  src: url('./assets/fonts/RobotoSlab-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: Roboto Slab;
+  src: url('./assets/fonts/RobotoSlab-ExtraLight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: Roboto Slab;
+  src: url('./assets/fonts/RobotoSlab-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: Roboto Slab;
+  src: url('./assets/fonts/RobotoSlab-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: Roboto Slab;
+  src: url('./assets/fonts/RobotoSlab-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: Roboto Slab;
+  src: url('./assets/fonts/RobotoSlab-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: Roboto Slab;
+  src: url('./assets/fonts/RobotoSlab-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: Roboto Slab;
+  src: url('./assets/fonts/RobotoSlab-ExtraBold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: Roboto Slab;
+  src: url('./assets/fonts/RobotoSlab-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+// Roboto Slab end
+
+
+//general classes
+
+.cursur-pointer {
+  cursor: pointer;
+}
