--- a/src/app/components/music-player/music-player.component.html
+++ b/src/app/components/music-player/music-player.component.html
@@ -51,5 +51,20 @@
         <input type="range" min="0" max="100" [(ngModel)]="volumeLevel">
       </div>
     </div>
+    <div appDropdown class="more-menu dropup">
+      <a class="more-menu-btn">
+        <i class="fa fa-ellipsis-v"></i>
+      </a>
+      <div class="more-menu-container dropdown-menu dropdown-menu-right px-2">
+        <a class="dropdown-item"><i class="fa fa-heart-o mr-2"></i>Favorite</a>
+        <a class="dropdown-item"><i class="fa fa-plus-square-o mr-2"></i>Add to Playlist</a>
+        <a class="dropdown-item"><i class="fa fa-star-o mr-2"></i>Rate</a>
+      </div>
+    </div>
+    <div class="play-list-toggle dropup">
+      <a class="play-list-toggle-btn" (click)="onNowPlaying()">
+        <i class="fa fa-music"></i>
+      </a>
+    </div>
   </div>
 </div>
