--- a/src/app/components/song-item/song-item.component.scss
+++ b/src/app/components/song-item/song-item.component.scss
@@ -3,6 +3,7 @@
 .item-container {
   position: relative;
   width: 12rem;
+  margin: .5rem;
   box-shadow: 8px 8px 10px rgba($color: #000000, $alpha: 0.5);
   border-radius: $card-img-radius-lg;
   transition: all 0.2s;
