--- a/src/app/components/upload-item/upload-item.component.html
+++ b/src/app/components/upload-item/upload-item.component.html
@@ -1,11 +1,11 @@
-<div class="upload-item-container d-flex flex-column">
+<div class="upload-item-container d-flex flex-column mb-3">
   <div class="upload-item-header d-flex flex-row justify-content-between mp-1">
-    <p class="upload-item-header--title ml-2 ml-md-5 mt-2">Sample1.mp3</p>
-    <span class="upload-item-close cursur-pointer mr-2"><i class="fa fa-window-close"></i></span>
+    <p class="upload-item-header--title ml-2 ml-md-5 mt-2">{{file.name}}</p>
+    <span class="upload-item-close cursor-pointer mr-2" (click)="onClose()"><i class="fa fa-window-close"></i></span>
   </div>
   <div class="d-flex flex-row align-items-center">
     <div class="upload-item-image-container mr-2">
-      <img src="../../../assets/images/no-cover.png" class="upload-item-image">
+      <img [src]="imageUrl || '../../../assets/images/no-cover.png'" class="upload-item-image">
     </div>
     <div class="upload-item-progress-container progress w-100 mr-md-0 mr-2">
       <div class="progress-bar bg-primary" role="progressbar"
@@ -13,12 +13,14 @@
       aria-valuemax="100"></div>
     </div>
     <div class="upload-item-size-container mx-2 d-none d-md-block">
-      <p>4.3MB</p>
+      <p *ngIf="uploasFinished === null">{{file.size | filesize}}</p>
+      <span class="text-success" *ngIf="uploasFinished === true"><i class="fa fa-check"></i></span>
+      <span class="text-danger" *ngIf="uploasFinished === false"><i class="fa fa-close"></i></span>
     </div>
   </div>
   <div class="upload-item-controls-container pb-2">
-    <span class="cursur-pointer mr-3 text-danger"><i class="fa fa-stop"></i></span>
-    <span class="cursur-pointer mr-3 text-warning"><i class="fa fa-pause"></i></span>
-    <span class="cursur-pointer mr-3 text-primary"><i class="fa fa-play"></i></span>
+    <span class="cursor-pointer mr-3 text-danger"><i class="fa fa-stop"></i></span>
+    <span class="cursor-pointer mr-3 text-warning"><i class="fa fa-pause"></i></span>
+    <span class="cursor-pointer mr-3 text-primary"><i class="fa fa-play"></i></span>
   </div>
 </div>
